@@ -8,6 +8,7 @@
 * build: migrated to GNUInstallDirs CMake module which should fix installation paths on Debian multiarch (beevvy)
 * qt4_docking: #2627 fixed: fixed context menu in bottom panel in Ubuntu 12.04 GNOME Classic session (beevvy)
 * icons: #2629 fixed: fixed tray icon size in some cases (beevvy)
+* chat, tabs: #2626 fixed: fixed storing opened tabs and recent tabs in some circumstances (beevvy)
 
 +++ version 0.12.0
 * gui: better preview in configuration window (Vogel)
